# ordigi

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: main.yaml
src/ordigi/: client.py  corkscrew.py  logging.py  main.py  session.py
src/ordigi/cli/: __init__.py  scp.py  server.py  shell.py  ssh.py  util.py
src/ordigi/models/: ssh.py
src/ordigi/server/: __init__.py  session.py  state.py  util.py
tests/: conftest.py  fixtures.py  test_model_util.py  test_models.py  test_session.py
